--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <h1>Rap Names API</h1>
-    <p>Please use localhost:8000/api/rapper-name</p>
-    
+    <p>Please use https://rapper-api-100dev.herokuapp.com/api/rapper-name</p>
+
+
 
 
     <script src="/js/main.js"></script>
